--- a/src/static/mobi.css
+++ b/src/static/mobi.css
@@ -1,4 +1,4 @@
-/* Mobi.css v1.0.1 http://getmobicss.com */
+/*! Mobi.css v2.0.0-beta.1 http://getmobicss.com */
 @charset "UTF-8";
 html {
   box-sizing: border-box; }
@@ -10,17 +10,16 @@ html {
 
 html {
   font-size: 10px;
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0.1);
   -webkit-text-size-adjust: 100%;
      -moz-text-size-adjust: 100%;
       -ms-text-size-adjust: 100%;
           text-size-adjust: 100%; }
 
 body {
-  background-color: #f3f3f3;
+  background-color: white;
   color: #333;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Ubuntu", "Cantarell", Arial, Helvetica, sans-serif;
-  font-size: 1.8rem;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Hiragino Sans GB", "Microsoft Yahei", "微软雅黑", Arial, Helvetica, STHeiti, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-size: 16px;
   line-height: 1.5;
   margin: 0; }
 
@@ -30,7 +29,7 @@ h3,
 h4,
 h5,
 h6 {
-  margin: 32px 0 0; }
+  margin: 30px 0 0; }
 
 p,
 blockquote,
@@ -42,7 +41,7 @@ ol,
 pre,
 address,
 figure {
-  margin: 14px 0 0; }
+  margin: 15px 0 0; }
 
 h1,
 h2,
@@ -53,25 +52,25 @@ h6 {
   font-weight: 600; }
 
 h1 {
-  font-size: 3.2rem; }
+  font-size: 32px; }
 
 h2 {
-  font-size: 2.6rem; }
+  font-size: 26px; }
 
 h3 {
-  font-size: 2.4rem; }
+  font-size: 22px; }
 
 h4 {
-  font-size: 2.2rem; }
+  font-size: 20px; }
 
 h5 {
-  font-size: 2rem; }
+  font-size: 18px; }
 
 h6 {
-  font-size: 1.8rem; }
+  font-size: 16px; }
 
 a {
-  color: #0080ff;
+  color: #2680d9;
   text-decoration: none;
   -webkit-text-decoration-skip: objects; }
   a:active, a:hover {
@@ -85,39 +84,32 @@ dt {
 code,
 kbd,
 samp {
-  background-color: rgba(0, 0, 0, 0.05);
+  background-color: #f2f2f2;
   font-family: Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
   font-size: 85%;
-  padding: 0.1em 0.2em; }
+  padding: 0.2em 0.3em; }
 
 pre {
-  max-height: 300px;
+  background-color: #f2f2f2;
+  font-family: Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+  font-size: 13px;
+  line-height: 1.2;
   overflow: auto;
   -webkit-overflow-scrolling: touch;
-  background-color: rgba(0, 0, 0, 0.05);
-  font-family: Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
-  font-size: 1.3rem;
-  line-height: 1.2;
-  margin-left: -14px;
-  margin-right: -14px;
-  padding: 14px; }
+  padding: 15px; }
   pre code {
     background-color: transparent;
-    font-size: 1.3rem;
+    font-size: 13px;
     padding: 0; }
-  @media (min-width: 740px) {
-    pre {
-      margin-left: 0;
-      margin-right: 0; } }
 
 blockquote {
   border-left: 5px solid #ddd;
   color: #777;
-  padding-left: 14px; }
+  padding-left: 15px; }
 
 ul,
 ol {
-  padding-left: 28px; }
+  padding-left: 30px; }
 
 dt,
 dd,
@@ -136,26 +128,28 @@ small {
 
 sub,
 sup {
-  font-size: 75%;
+  font-size: 85%;
   line-height: 0;
   position: relative;
   vertical-align: baseline; }
 
 sub {
-  bottom: -.25em; }
+  bottom: -0.2em; }
 
 sup {
-  top: -.5em; }
+  top: -0.4em; }
 
-address {
-  color: #777;
-  font-size: 85%;
+address,
+time {
   font-style: normal; }
 
 mark {
-  background-color: #ff0;
+  background-color: yellow;
   color: #333;
-  padding: 0 .2em; }
+  padding: 0 0.2em; }
+
+rt {
+  font-size: 60%; }
 
 abbr[title] {
   border-bottom: 0;
@@ -172,7 +166,11 @@ img {
 
 audio,
 video {
-  width: 100%; }
+  max-width: 100%; }
+
+figcaption {
+  color: #777;
+  font-size: 85%; }
 
 [role="button"] {
   cursor: pointer; }
@@ -186,7 +184,6 @@ label,
 select,
 summary,
 textarea {
-  outline: 0;
   -ms-touch-action: manipulation;
       touch-action: manipulation; }
 
@@ -217,11 +214,11 @@ html [type=button],
 
 fieldset {
   border: 1px solid #ddd;
-  margin: 14px 0 0;
-  padding: 0 14px 14px; }
+  margin: 15px 0 0;
+  padding: 0 15px 15px; }
 
 legend {
-  padding: 0 3px; }
+  padding: 0 0.2em; }
 
 optgroup {
   color: #777;
@@ -232,34 +229,23 @@ option {
   color: #333; }
 
 progress {
-  width: 100%; }
+  max-width: 100%; }
+
+.container,
+.container-wider,
+.container-fluid {
+  overflow: hidden;
+  padding: 0 15px 15px;
+  -webkit-box-flex: 1;
+  -webkit-flex-grow: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1; }
 
 .container {
-  background-color: #fff;
-  max-width: 740px;
-  min-width: 320px;
-  outline: 14px solid #fff;
-  overflow: hidden;
-  padding: 0 14px 14px;
-  width: 100%; }
+  max-width: 800px; }
 
-@media (min-width: 1041px) {
-  .container {
-    max-width: 768px;
-    outline: 0;
-    padding: 0 28px 14px; } }
-
-.top-gap-big,
-.form .top-gap-big {
-  margin-top: 32px; }
-
-.top-gap,
-.form .top-gap {
-  margin-top: 14px; }
-
-.top-gap-0,
-.form .top-gap-0 {
-  margin-top: 0; }
+.container-wider {
+  max-width: 1200px; }
 
 .flex-left,
 .flex-center,
@@ -268,13 +254,15 @@ progress {
 .flex-middle,
 .flex-bottom,
 .flex-vertical {
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -webkit-flex-flow: row nowrap;
+      -ms-flex-flow: row nowrap;
+          flex-flow: row nowrap;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
-  display: flex;
-  -webkit-flex-flow: row nowrap;
-      -ms-flex-flow: row nowrap;
-          flex-flow: row nowrap; }
+  display: flex; }
 
 .flex-left,
 .flex-center,
@@ -333,17 +321,34 @@ progress {
           align-items: flex-end; }
 
 .units-gap {
-  margin-left: -7px;
-  margin-right: -7px; }
+  margin-left: -7.5px;
+  margin-right: -7.5px; }
   .units-gap > .unit,
   .units-gap > .unit-0,
+  .units-gap > .unit-1,
+  .units-gap > .unit-1-on-mobile,
   .units-gap > .unit-1-2,
   .units-gap > .unit-1-3,
   .units-gap > .unit-2-3,
   .units-gap > .unit-1-4,
   .units-gap > .unit-3-4 {
-    padding-left: 7px;
-    padding-right: 7px; }
+    padding-left: 7.5px;
+    padding-right: 7.5px; }
+
+.units-gap-big {
+  margin-left: -15px;
+  margin-right: -15px; }
+  .units-gap-big > .unit,
+  .units-gap-big > .unit-0,
+  .units-gap-big > .unit-1,
+  .units-gap-big > .unit-1-on-mobile,
+  .units-gap-big > .unit-1-2,
+  .units-gap-big > .unit-1-3,
+  .units-gap-big > .unit-2-3,
+  .units-gap-big > .unit-1-4,
+  .units-gap-big > .unit-3-4 {
+    padding-left: 15px;
+    padding-right: 15px; }
 
 .unit {
   -webkit-flex-basis: 0;
@@ -355,6 +360,8 @@ progress {
           flex-grow: 1;
   max-width: 100%; }
 
+.unit-1,
+.unit-1-on-mobile,
 .unit-1-2,
 .unit-1-3,
 .unit-2-3,
@@ -363,6 +370,12 @@ progress {
   -webkit-flex-shrink: 0;
       -ms-flex-negative: 0;
           flex-shrink: 0; }
+
+.unit-1 {
+  -webkit-flex-basis: 100%;
+      -ms-flex-preferred-size: 100%;
+          flex-basis: 100%;
+  max-width: 100%; }
 
 .unit-1-2 {
   -webkit-flex-basis: 50%;
@@ -402,12 +415,16 @@ progress {
           flex-direction: column; }
   .flex-vertical > .unit,
   .flex-vertical > .unit-0,
+  .flex-vertical > .unit-1,
+  .flex-vertical > .unit-1-on-mobile,
   .flex-vertical > .unit-1-2,
   .flex-vertical > .unit-1-3,
   .flex-vertical > .unit-2-3,
   .flex-vertical > .unit-1-4,
   .flex-vertical > .unit-3-4 {
     max-width: none; }
+  .flex-vertical > .unit-1 {
+    max-height: 100%; }
   .flex-vertical > .unit-1-2 {
     max-height: 50%; }
   .flex-vertical > .unit-1-3 {
@@ -419,8 +436,39 @@ progress {
   .flex-vertical > .unit-3-4 {
     max-height: 75%; }
 
+.flex-wrap {
+  -webkit-flex-wrap: wrap;
+      -ms-flex-wrap: wrap;
+          flex-wrap: wrap; }
+
+@media (max-width: 767px) {
+  .unit-1-on-mobile {
+    -webkit-flex-basis: 100%;
+        -ms-flex-preferred-size: 100%;
+            flex-basis: 100%;
+    max-width: 100%; }
+  .flex-vertical > .unit-1-on-mobile {
+    max-height: 100%; } }
+
+.top-gap-big {
+  margin-top: 30px !important; }
+
+.top-gap {
+  margin-top: 15px !important; }
+
+.top-gap-0 {
+  margin-top: 0 !important; }
+
+@media (max-width: 767px) {
+  .hide-on-mobile {
+    display: none !important; } }
+
+@media (min-width: 768px) {
+  .show-on-mobile {
+    display: none !important; } }
+
 .table {
-  background-color: #fff;
+  background-color: white;
   border: 0;
   border-collapse: collapse;
   border-spacing: 0;
@@ -428,6 +476,7 @@ progress {
   .table caption {
     caption-side: bottom;
     color: #777;
+    font-size: 85%;
     padding: 5px;
     text-align: left; }
   .table th,
@@ -437,62 +486,61 @@ progress {
     padding: 5px;
     text-align: left; }
   .table th {
-    background-color: rgba(0, 0, 0, 0.05);
+    background-color: #f2f2f2;
     font-weight: 600; }
 
 .btn {
-  display: block;
-  line-height: 1.25;
-  margin: 14px 0 0;
-  width: 100%;
   -webkit-appearance: none;
      -moz-appearance: none;
           appearance: none;
-  background-color: #fff;
+  background-color: white;
   border: 1px solid #ddd;
   border-radius: 3px;
   color: #333;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Ubuntu", "Cantarell", Arial, Helvetica, sans-serif;
-  font-size: 1.8rem;
+  cursor: pointer;
+  display: inline-block;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Hiragino Sans GB", "Microsoft Yahei", "微软雅黑", Arial, Helvetica, STHeiti, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-size: 16px;
+  line-height: 1.25;
+  margin: 15px 0 0;
   padding: 5px 10px;
-  text-align: center;
-  background-color: #f3f3f3;
-  cursor: pointer; }
-  .btn:focus {
-    border-color: #3399ff; }
+  text-align: center; }
   .btn:hover, .btn:active {
+    background-color: #f2f2f2;
     text-decoration: none; }
   .btn[disabled] {
     cursor: default;
-    opacity: .5;
+    opacity: 0.5;
     pointer-events: none; }
 
 .btn-primary {
-  background-color: #40bf40;
-  border-color: #40bf40;
-  color: #fff; }
+  background-color: #2680d9;
+  border-color: #2680d9;
+  color: white; }
+  .btn-primary:hover, .btn-primary:active {
+    background-color: #2273c3; }
   .btn-primary[disabled] {
     cursor: default;
-    opacity: .5;
+    opacity: 0.5;
     pointer-events: none; }
 
 .btn-danger {
-  color: #cc0000; }
+  background-color: #db5757;
+  border-color: #db5757;
+  color: white; }
+  .btn-danger:hover, .btn-danger:active {
+    background-color: #d74242; }
   .btn-danger[disabled] {
     cursor: default;
-    opacity: .5;
+    opacity: 0.5;
     pointer-events: none; }
 
-@media (max-width: 1040px) {
-  .hide-on-mobile {
-    display: none; } }
+.btn-block {
+  display: block;
+  width: 100%; }
 
-@media (min-width: 1041px) {
-  .show-on-mobile {
-    display: none; } }
 
 .scroll-view {
-  max-height: 300px;
   overflow: auto;
   -webkit-overflow-scrolling: touch; }
 
@@ -505,4 +553,19 @@ progress {
 .text-right {
   text-align: right; }
 
-/*# sourceMappingURL=mobi.css.map */
+.text-muted {
+  color: #777; }
+
+.text-primary {
+  color: #2680d9; }
+
+.text-danger {
+  color: #db5757; }
+
+a.text-muted,
+a.text-primary,
+a.text-danger {
+  text-decoration: underline; }
+
+.text-small {
+  font-size: 85%; }
